# Thunar_sort_files_by_extension

./: Makefile  Makefile.in  README.md  Thunar-bulk-rename.desktop  Thunar-folder-handler.desktop  Thunar.desktop  Thunar.spec  ThunarBulkRename  ThunarHelp  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  libtool  org.xfce.FileManager.service  org.xfce.Thunar.service
docs/: Makefile  Makefile.am  Makefile.in  ThumbnailersCacheFormat.txt  Thunar.1  Thunar.xml
examples/: Makefile  Makefile.am  Makefile.in  nautilus-bulk-rename.py  thunar-file-manager.py  xfce-file-manager.py
icons/: Makefile  Makefile.in
icons/16x16/: Makefile  Makefile.am  Makefile.in
pixmaps/: Makefile  Makefile.am  Makefile.in
plugins/: Makefile  Makefile.am  Makefile.in
po/: Makefile  Makefile.in  POTFILES  ar.gmo  be.gmo  ca.gmo  cs.gmo  da.gmo  de.gmo  dz.gmo  el.gmo  en_GB.gmo  eo.gmo  es.gmo  et.gmo  eu.gmo  fi.gmo  fr.gmo  gl.gmo  he.gmo  hu.gmo  id.gmo  it.gmo  ja.gmo  ka.gmo  ko.gmo  ku.gmo  lt.gmo  lv.gmo  mk.gmo  nb.gmo  nl.gmo  nn.gmo  pa.gmo  pl.gmo  pt.gmo  pt_BR.gmo  ro.gmo  ru.gmo  sk.gmo  (+7 more)
po-doc/: Makefile  Makefile.in
tdb/: Makefile  Makefile.am  Makefile.in  spinlock.c  spinlock.h  tdb.c  tdb.h  tdbconfig.h  tdbspeed.c  tdbtool.c  tdbtorture.c
tests/: Makefile  Makefile.am  Makefile.in  test-thunar-vfs-path.c
thunar-vfs/: Makefile  Makefile.am  Makefile.in  thunar-vfs-1.pc  thunar-vfs-alias.h  thunar-vfs-aliasdef.c  thunar-vfs-config.c  thunar-vfs-config.h  thunar-vfs-config.h.in  thunar-vfs-deep-count-job.c  thunar-vfs-exec.c  (+90 more)
(+732 files in other folders)
